tests/ui/lint/snapshots/duplicate_logical_operand_or.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Duplicate logical operand
   ╭─[test.lis:5:11]
 4 │   let b = 10;
 5 │   let _ = a == b || a == b
   ·           ────────┬───────
   ·                   ╰── accidental repetition
 6 │ }
   ╰────
  help: Simplify to `a == b` · code: [lint.duplicate_logical_operand]
