tests/ui/lint/snapshots/duplicate_map_keys_rune.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Duplicate map key
   ╭─[test.lis:3:22]
 2 │ fn main() {
 3 │   let _ = Map.from([('a', 1), ('a', 2)])
   ·                      ─┬─       ─┬─
   ·                       │         ╰── overwrites first
   ·                       ╰── key for first entry
 4 │ }
   ╰────
  help: `Map.from` keeps the last entry for a key, so the earlier entry never reaches the map. Remove one of the two entries · code: [infer.duplicate_map_keys]
