tests/ui/lint/snapshots/duplicate_tag_key.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Duplicate tag
   ╭─[test.lis:4:3]
 3 │ pub struct User {
 4 │   #[json(omitempty)]
   ·   ─────────┬────────
   ·            ╰── first occurrence
 5 │   #[json(skip)]
   ·   ──────┬──────
   ·         ╰── `json` is already set
 6 │   name: string,
   ╰────
  help: Remove one of the `json` attributes - each tag key may appear only once per field · code: [attribute.duplicate_tag]
