tests/ui/lint/snapshots/eager_split_in_loop.snap
---
source: tests/ui/lint/mod.rs
---
  ● Needless slice
   ╭─[test.lis:6:15]
 5 │   let mut n = 0
 6 │   for part in strings.Split(s, ",") {
   ·               ──────────┬──────────
   ·                         ╰── only this loop reads it
 7 │     n += part.length()
   ╰────
  help: `strings.Split(s, ",")` allocates a slice that only this loop reads. Use `strings.SplitSeq(s, ",")`, which returns the same parts one at a time · code: [lint.eager_split_in_loop]
